// Vitest Snapshot v1

exports[`basic conditional extraction 1`] = `
"import { StyleSheet as ReactNativeStyleSheet } from 'react-native';
const _sheet = ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"alignItems\\": \\"stretch\\",
    \\"flexShrink\\": 0,
    \\"display\\": \\"flex\\",
    \\"flexBasis\\": \\"auto\\",
    \\"position\\": \\"relative\\",
    \\"minHeight\\": 0,
    \\"minWidth\\": 0,
    \\"flexDirection\\": \\"column\\"
  },
  \\"1\\": {
    \\"backgroundColor\\": \\"rgba(255,0,0,1.00)\\"
  },
  \\"2\\": {
    \\"backgroundColor\\": \\"rgba(0,0,255,1.00)\\"
  },
  \\"3\\": {
    \\"alignItems\\": \\"stretch\\",
    \\"flexShrink\\": 0,
    \\"display\\": \\"flex\\",
    \\"flexBasis\\": \\"auto\\",
    \\"position\\": \\"relative\\",
    \\"minHeight\\": 0,
    \\"minWidth\\": 0,
    \\"flexDirection\\": \\"column\\"
  },
  \\"4\\": {
    \\"backgroundColor\\": \\"rgba(255,0,0,1.00)\\"
  },
  \\"5\\": {}
});
import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { YStack } from 'tamagui';
export function Test() {
  return <>
          <__ReactNativeView style={[_sheet[\\"0\\"], x ? _sheet[\\"1\\"] : _sheet[\\"2\\"]]} />
          <__ReactNativeView style={[_sheet[\\"3\\"], x ? _sheet[\\"4\\"] : _sheet[\\"5\\"]]} />
        </>;
}"
`;

exports[`basic extraction 1`] = `
"import { StyleSheet as ReactNativeStyleSheet } from 'react-native';
const _sheet = ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"alignItems\\": \\"stretch\\",
    \\"flexShrink\\": 0,
    \\"display\\": \\"flex\\",
    \\"flexBasis\\": \\"auto\\",
    \\"position\\": \\"relative\\",
    \\"minHeight\\": 0,
    \\"minWidth\\": 0,
    \\"flexDirection\\": \\"column\\",
    \\"backgroundColor\\": \\"rgba(255,0,0,1.00)\\"
  }
});
import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { YStack } from 'tamagui';
export function Test() {
  return <__ReactNativeView style={[_sheet[\\"0\\"]]} />;
}"
`;

exports[`flat transform props 1`] = `
"import { StyleSheet as ReactNativeStyleSheet } from 'react-native';
const _sheet = ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"alignItems\\": \\"stretch\\",
    \\"flexShrink\\": 0,
    \\"display\\": \\"flex\\",
    \\"flexBasis\\": \\"auto\\",
    \\"position\\": \\"relative\\",
    \\"minHeight\\": 0,
    \\"minWidth\\": 0,
    \\"flexDirection\\": \\"column\\"
  },
  \\"1\\": {
    \\"transform\\": [{
      \\"scale\\": 1
    }]
  },
  \\"2\\": {
    \\"transform\\": [{
      \\"scale\\": 2
    }]
  },
  \\"3\\": {
    \\"transform\\": [{
      \\"translateY\\": 20
    }, {
      \\"translateX\\": 10
    }, {
      \\"rotate\\": \\"10deg\\"
    }]
  }
});
import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { YStack } from 'tamagui';
export function Test(isLoading) {
  return <__ReactNativeView style={[_sheet[\\"0\\"], isLoading ? _sheet[\\"1\\"] : _sheet[\\"2\\"], _sheet[\\"3\\"]]} />;
}"
`;

exports[`handles style order merge properly 1`] = `
"import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { YStack } from 'tamagui';
export function Test(props) {
  return <YStack scale={props.isLoading ? 1 : 2} x={10} {...props} rotate=\\"10deg\\" />;
}"
`;

exports[`theme value extraction should NOT work when theme variables used 1`] = `
"import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { Paragraph } from 'tamagui';
export function Test() {
  return <Paragraph>hello world</Paragraph>;
}"
`;

exports[`theme value extraction should work when no theme variables used 1`] = `
"import { StyleSheet as ReactNativeStyleSheet } from 'react-native';
const _sheet = ReactNativeStyleSheet.create({
  \\"0\\": {
    \\"fontFamily\\": \\"Inter\\",
    \\"display\\": \\"flex\\",
    \\"color\\": \\"rgba(255,0,0,1.00)\\",
    \\"letterSpacing\\": 0,
    \\"fontSize\\": 14,
    \\"lineHeight\\": 23
  }
});
import { View as __ReactNativeView, Text as __ReactNativeText } from 'react-native';
import { Paragraph } from 'tamagui';
export function Test() {
  return <__ReactNativeText style={[_sheet[\\"0\\"]]}>hello world</__ReactNativeText>;
}"
`;
